reorg - separate unstructured from 2d

--- a/examples/01_Base_Classes.ipynb
+++ b/examples/01_Base_Classes.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import cartopy.crs as ccrs\n",
     "from genesis.model import Model\n",
-    "from genesis.mesh import Mesh, Unstruct2D\n",
-    "import panel as pn\n",
+    "from genesis.mesh import Mesh, Unstructured, Unstructured2D\n",
     "import holoviews as hv\n",
     "\n",
     "hv.extension('bokeh')"
@@ -55,6 +54,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create an empty unstructured base mesh object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set crs\n",
+    "crs = ccrs.PlateCarree()\n",
+    "# instantiate mesh object\n",
+    "mesh_object = Unstructured(crs=crs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Create an empty unstructured 2D mesh object"
    ]
   },
@@ -67,7 +85,7 @@
     "# set crs\n",
     "crs = ccrs.PlateCarree()\n",
     "# instantiate mesh object\n",
-    "mesh_object = Unstruct2D(crs=crs)\n",
+    "mesh_object = Unstructured2D(crs=crs)\n",
     "mesh_object.view_mesh()"
    ]
   }
